fix(reservations): adjust height of modal close button for better visibility

--- a/src/app/components/reservations/pages/reservations-page.component.scss
+++ b/src/app/components/reservations/pages/reservations-page.component.scss
@@ -3,7 +3,7 @@
   top: 1rem;
   right: 1rem;
   width: 1.5rem;
-  height: 1.5rem;
+  height: 2rem;
   background-color: rgba(96, 70, 82, 0.15);
   border: none;
   border-radius: 50%;
